--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@prisma/client": "^6.5.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/luxon": "^3.6.2",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.6.1",
     "node": "^23.11.0",
     "pg": "^8.13.3",
     "prisma": "^6.5.0"
