--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/luxon": "^3.6.2",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.6.1",
     "node": "^23.11.0",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.3",
     "prisma": "^6.5.0"
   }
